Move rollour rate support to individual task

--- a/concourse/tasks/daisy-publish-images-fast-rollout.yaml
+++ b/concourse/tasks/daisy-publish-images-fast-rollout.yaml
@@ -19,6 +19,7 @@ run:
   - -source_gcs_path=((source_gcs_path))
   - -source_version=((source_version))
   - -publish_version=((publish_version))
+  - -rollout_rate=0
   - -skip_confirmation
   - -replace
   - -no_root
