add line coverage for guest agent (#330)
* add line coverage for guest agent

* strip percent sign

--- a/container_images/concourse-metrics/Dockerfile
+++ b/container_images/concourse-metrics/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /
 # this needs to be run from root of googlecloudplatform/guest-test-infra
 COPY . /
 RUN CGO_ENABLED=0 go build -o /publish-job-result ./container_images/concourse-metrics/cmd/publish-job-result/main.go
+RUN CGO_ENABLED=0 go build -o /publish-coverage ./container_images/concourse-metrics/cmd/publish-coverage/main.go
 RUN CGO_ENABLED=0 go build -o /publish-time-since ./container_images/concourse-metrics/cmd/publish-time-since/main.go
 RUN apk --update add ca-certificates
 
@@ -15,7 +16,9 @@ RUN chmod +x /publish-job-result
 FROM scratch
 
 COPY --from=0 publish-job-result /publish-job-result
+COPY --from=0 publish-coverage /publish-coverage
 COPY --from=0 publish-time-since /publish-time-since
+
 COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/ca-certificates.crt
 
 # for debugging
