--- a/concourse/tasks/render-templates.yaml
+++ b/concourse/tasks/render-templates.yaml
@@ -3,7 +3,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: gcr.io/compute-image-tools/jsonnet-go
+    repository: gcr.io/gcp-guest/jsonnet-go
     tag: latest
 
 inputs:
