--- a/concourse/pipelines/guest-package-build.yaml
+++ b/concourse/pipelines/guest-package-build.yaml
@@ -70,6 +70,14 @@ jobs:
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/guest-agent
           git_ref: ((.:commit-sha))
+      - task: guest-package-build-guest-agent-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el9.wf.json
+          repo-name: guest-agent
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/guest-agent
+          git_ref: ((.:commit-sha))
       - task: guest-package-build-guest-agent-goo
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -166,11 +174,17 @@ jobs:
         vars:
           source-image: projects/rhel-cloud/global/images/family/rhel-8
           dest-image: rhel-8-((.:build-id))
-          gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
+          gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm\
+      - task: build-package-image-el-9
+        file: guest-test-infra/concourse/tasks/daisy-build-package-image.yaml
+        vars:
+          source-image: projects/bct-prod-images/global/images/family/centos-stream-9
+          dest-image: centos-stream-9-((.:build-id))
+          gcs-package-path: gs://gcp-guest-package-uploads/guest-agent/google-guest-agent-((.:package-version))-g1.el9.x86_64.rpm\
   - task: guest-agent-image-tests
     file: guest-test-infra/concourse/tasks/image-test-args.yaml
     vars:
-      images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id))
+      images: projects/gcp-guest/global/images/debian-9-((.:build-id)),projects/gcp-guest/global/images/debian-10-((.:build-id)),projects/gcp-guest/global/images/debian-11-((.:build-id)),projects/gcp-guest/global/images/centos-7-((.:build-id)),projects/gcp-guest/global/images/rhel-7-((.:build-id)),projects/gcp-guest/global/images/rhel-8-((.:build-id)),projects/gcp-guest/global/images/centos-stream-9-((.:build-id))
       extra-args: "-exclude=(image)|(disk)|(security)|(oslogin)"
   - in_parallel:
       fail_fast: true
@@ -213,6 +227,14 @@ jobs:
           package_path: guest-agent/google-guest-agent-((.:package-version))-g1.el8.x86_64.rpm
           universe: cloud-yum
           repo: google-guest-agent-el8
+        params:
+          ENVIRONMENT: staging
+      - task: inject-guest-agent-el9
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: guest-agent/google-guest-agent-((.:package-version))-g1.el9.x86_64.rpm
+          universe: cloud-yum
+          repo: google-guest-agent-el9
         params:
           ENVIRONMENT: staging
       - task: inject-compute-engine-windows
@@ -297,6 +319,12 @@ jobs:
         vars:
           universe: cloud-yum
           repo: google-guest-agent-el8
+          environment: stable
+      - task: promote-el9-stable
+        file: guest-test-infra/concourse/tasks/gcloud-promote-package.yaml
+        vars:
+          universe: cloud-yum
+          repo: google-guest-agent-el9
           environment: stable
   - task: publish-time-since-stable
     file: guest-test-infra/concourse/tasks/publish-time-since.yaml
@@ -395,6 +423,14 @@ jobs:
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/oslogin
           git_ref: master
+      - task: guest-package-build-guest-oslogin-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el9.wf.json
+          repo-name: guest-oslogin
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/oslogin
+          git_ref: master
   - put: guest-oslogin-tag
     params:
       name: package-version/version
@@ -433,6 +469,12 @@ jobs:
           package_path: oslogin/google-compute-engine-oslogin-((.:package-version))-g1.el8.x86_64.rpm
           universe: cloud-yum
           repo: gce-google-compute-engine-oslogin-el8
+      - task: inject-guest-oslogin-el9
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: oslogin/google-compute-engine-oslogin-((.:package-version))-g1.el9.x86_64.rpm
+          universe: cloud-yum
+          repo: gce-google-compute-engine-oslogin-el9
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
@@ -494,6 +536,12 @@ jobs:
           universe: cloud-yum
           repo: gce-google-compute-engine-oslogin-el8
           environment: staging
+      - task: promote-el9-staging
+        file: guest-test-infra/concourse/tasks/gcloud-promote-package.yaml
+        vars:
+          universe: cloud-yum
+          repo: gce-google-compute-engine-oslogin-el9
+          environment: staging
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
@@ -554,6 +602,12 @@ jobs:
         vars:
           universe: cloud-yum
           repo: gce-google-compute-engine-oslogin-el8
+          environment: stable
+      - task: promote-el9-stable
+        file: guest-test-infra/concourse/tasks/gcloud-promote-package.yaml
+        vars:
+          universe: cloud-yum
+          repo: gce-google-compute-engine-oslogin-el9
           environment: stable
   on_success:
     task: success
@@ -621,6 +675,14 @@ jobs:
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/osconfig
           git_ref: master
+      - task: guest-package-build-osconfig-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el9.wf.json
+          repo-name: osconfig
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/osconfig
+          git_ref: master
       - task: guest-package-build-osconfig-goo
         file: guest-test-infra/concourse/tasks/guest-package-build.yaml
         vars:
@@ -655,6 +717,12 @@ jobs:
           package_path: osconfig/google-osconfig-agent-((.:package-version))-g1.el8.x86_64.rpm
           universe: cloud-yum
           repo: google-osconfig-agent-el8
+      - task: inject-osconfig-el9-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: osconfig/google-osconfig-agent-((.:package-version))-g1.el9.x86_64.rpm
+          universe: cloud-yum
+          repo: google-osconfig-agent-el9
       - task: inject-osconfig-goo-unstable
         file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
         vars:
@@ -727,6 +795,14 @@ jobs:
           version: ((.:package-version))
           gcs_path: gs://gcp-guest-package-uploads/gce-disk-expand
           git_ref: master
+      - task: guest-package-build-guest-diskexpand-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          wf: build_el9.wf.json
+          repo-name: guest-diskexpand
+          version: ((.:package-version))
+          gcs_path: gs://gcp-guest-package-uploads/gce-disk-expand
+          git_ref: master
   - put: guest-diskexpand-tag
     params:
       name: package-version/version
@@ -753,6 +829,12 @@ jobs:
           package_path: gce-disk-expand/gce-disk-expand-((.:package-version))-g1.el8.x86_64.rpm
           universe: cloud-yum
           repo: gce-disk-expand-el8
+      - task: inject-guest-diskexpand-el9-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: gce-disk-expand/gce-disk-expand-((.:package-version))-g1.el9.x86_64.rpm
+          universe: cloud-yum
+          repo: gce-disk-expand-el9
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
@@ -819,6 +901,14 @@ jobs:
           repo-name: guest-configs
           version: ((.:package-version))
           wf: build_el8.wf.json
+      - task: guest-package-build-guest-configs-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          gcs_path: gs://gcp-guest-package-uploads/google-compute-engine
+          git_ref: master
+          repo-name: guest-configs
+          version: ((.:package-version))
+          wf: build_el9.wf.json
   - put: guest-configs-tag
     params:
       name: package-version/version
@@ -857,6 +947,12 @@ jobs:
           package_path: google-compute-engine/google-compute-engine-((.:package-version))-g1.el8.noarch.rpm
           universe: cloud-yum
           repo: gce-google-compute-engine-el8
+      - task: inject-guest-configs-el9-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: google-compute-engine/google-compute-engine-((.:package-version))-g1.el9.noarch.rpm
+          universe: cloud-yum
+          repo: gce-google-compute-engine-el9
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
@@ -915,6 +1011,12 @@ jobs:
         vars:
           universe: cloud-yum
           repo: gce-google-compute-engine-el8
+          environment: staging
+      - task: promote-el9-staging
+        file: guest-test-infra/concourse/tasks/gcloud-promote-package.yaml
+        vars:
+          universe: cloud-yum
+          repo: gce-google-compute-engine-el9
           environment: staging
   on_success:
     task: success
@@ -975,6 +1077,12 @@ jobs:
           universe: cloud-yum
           repo: gce-google-compute-engine-el8
           environment: stable
+      - task: promote-el9-stable
+        file: guest-test-infra/concourse/tasks/gcloud-promote-package.yaml
+        vars:
+          universe: cloud-yum
+          repo: gce-google-compute-engine-el9
+          environment: stable
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
@@ -1033,6 +1141,14 @@ jobs:
           repo-name: artifact-registry-yum-plugin
           version: ((.:package-version))
           wf: build_el8.wf.json
+      - task: guest-package-build-artifact-registry-yum-plugin-el9
+        file: guest-test-infra/concourse/tasks/guest-package-build.yaml
+        vars:
+          gcs_path: gs://gcp-guest-package-uploads/dnf-plugin-artifact-registry
+          git_ref: main
+          repo-name: artifact-registry-yum-plugin
+          version: ((.:package-version))
+          wf: build_el9.wf.json
   - put: artifact-registry-yum-plugin-tag
     params:
       name: package-version/version
@@ -1051,6 +1167,12 @@ jobs:
         file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
         vars:
           package_path: dnf-plugin-artifact-registry/dnf-plugin-artifact-registry-((.:package-version))-g1.el8.noarch.rpm
+          universe: cloud-yum
+          repo: dnf-plugin-artifact-registry
+      - task: inject-artifact-registry-dnf-plugin-el9-unstable
+        file: guest-test-infra/concourse/tasks/gcloud-inject-package.yaml
+        vars:
+          package_path: dnf-plugin-artifact-registry/dnf-plugin-artifact-registry-((.:package-version))-g1.el9.noarch.rpm
           universe: cloud-yum
           repo: dnf-plugin-artifact-registry
   on_success:
