add google auth support

--- a/concourse/pipelines/container-build.yaml
+++ b/concourse/pipelines/container-build.yaml
@@ -169,3 +169,5 @@ jobs:
     vars:
       destination: gcr.io/gcp-guest/registry-image-forked:latest
       context: guest-test-infra/container_images/registry-image-forked
+    params:
+      DOCKERFILE: dockerfiles/alpine/Dockerfile
