--- a/concourse/pipelines/container-build.yaml
+++ b/concourse/pipelines/container-build.yaml
@@ -157,3 +157,17 @@ jobs:
     vars:
       destination: gcr.io/gcp-guest/jsonnet-go:latest
       context: guest-test-infra/container_images/jsonnet-go
+- name: build-registry-image-forked
+  serial_groups: [serial]
+  plan:
+  - get: guest-test-infra
+    trigger: true
+  - task: get-credential
+    file: guest-test-infra/concourse/tasks/get-credential.yaml
+  - task: build-image
+    file: guest-test-infra/concourse/tasks/build-container-image.yaml
+    vars:
+      destination: gcr.io/gcp-guest/registry-image-forked:latest
+      context: guest-test-infra/container_images/registry-image-forked
+    params:
+      DOCKERFILE: dockerfiles/alpine/Dockerfile
